--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "the backend of the advanced react boilerplate",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node src/index.js",
+    "debug": "nodemon -e js,graphql -x node --inspect",
+    "deploy": "prisma deploy --env-file .env",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
-    "test": "jest",
-    "deploy": "prisma deploy --env-file .env"
+    "playground": "graphql playground --dotenv .env",
+    "start": "nodemon -e js,graphql -x node src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
